--- a/package.json
+++ b/package.json
@@ -1,6 +1,8 @@
 {
   "dependencies": {
+    "@types/three": "^0.167.1",
     "nanoid": "^5.0.7",
+    "three": "^0.167.1",
     "tsx": "^4.16.3",
     "ws": "^8.18.0"
   },
