--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "nanoid": "^5.0.7",
     "three": "^0.167.1",
     "tsx": "^4.16.3",
+    "vite-plugin-glsl": "^1.3.0",
     "ws": "^8.18.0"
   },
   "devDependencies": {
